--- a/README
+++ b/README
@@ -11,13 +11,13 @@
 
 ---
 
-### Things I code with
+### 🧩 Things I code with
 
 ![C#](https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=csharp&logoColor=white)
 
 ---
 
-### Things I work with
+### 🎮 Things I work with
 
 ![Unity](https://img.shields.io/badge/Unity-100000?style=for-the-badge&logo=unity&logoColor=white)
 ![Postgres](https://img.shields.io/badge/Postgres-316192?style=for-the-badge&logo=postgresql&logoColor=white)
