Update C# badge in README

--- a/README
+++ b/README
@@ -13,7 +13,7 @@
 
 ### 🧩 Things I code with
 
-![C#](https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=csharp&logoColor=white)
+![C#](C#-239120.svg)
 
 ---
 
