Fix formatting in README for C# badge

--- a/README
+++ b/README
@@ -14,6 +14,7 @@
 ### 🧩 Things I code with
 
 ![С#](https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=csharp&logoColor=white)
+<img src="https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=csharp&logoColor=white" alt="С#">
 
 ![C#](https://raw.githubusercontent.com/Vanadium19/Vanadium19/main/C_-239120.png)
 
