--- a/README
+++ b/README
@@ -14,7 +14,7 @@
 ### 🧩 Things I code with
 
 ![С#](https://img.shields.io/badge/C%23-239120?style=for-the-badge&logo=csharp&logoColor=white)
-<img src="C_-239120.png" alt="С#">
+<img src="Vanadium19/C_-239120.png" alt="С#">
 
 ![C#](https://raw.githubusercontent.com/Vanadium19/Vanadium19/main/C_-239120.png)
 
